--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,4 @@
+/* estilos e importaciones de tailwind y material react */
 @import url('https://fonts.googleapis.com/css2?family=Alata&display=swap');
 @layer tailwind-base, tailwind-utilities;
 
